fix://pagination mobile

--- a/src/components/common/Table/TypeDisplay/Desktop/TableFooter/index.module.scss
+++ b/src/components/common/Table/TypeDisplay/Desktop/TableFooter/index.module.scss
@@ -1,9 +1,15 @@
+.desktopFooter{
+  border-top: 1px solid #e8e8e8;
+}
+.adaptiveFooter{
+  border-radius: 8px;
+  border: 1px solid #e8e8e8;
+}
 .footer {
   display: flex;
   justify-content: right;
   padding: 5px 11px;
   align-items: center;
-  border-top: 1px solid #e8e8e8;
 
   &__lable {
     color:  rgba(0, 0, 0, 0.75);
